[tool.poetry]
authors = ["gitworkflows <info@khulnasoft.com>"]
description = "Admin scripts and API"
name = "admin"
version = "0.1.2"
license = "Apache-2.0"

[tool.poetry.dependencies]
environs = "^9.5.0"
libcommon = {path = "../../libs/libcommon", develop = true}
python = "3.12.0"
requests = "^2.28.2"
starlette = "^0.31.0"
starlette-prometheus = "^0.9.0"
uvicorn = "^0.23.0"
watchdog = { extras = ["watchmedo"], version = "^3.0.0" }

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.12.0"
flake8 = "^6.0.0"
httpx = "^0.23.3"
huggingface-hub = "^0.18.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pip-audit = "^2.5.4"
pytest = "^7.2.1"
pytest-cov = "^2.12.1"
responses = "^0.24.0"
types-psutil = "^5.9.5"
types-requests = "^2.28.11"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "real_dataset: tests on the Hub",
    "wip: tests being developed"
]

[tool.coverage.run]
source = ["admin"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 119
preview = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "huggingface_hub.*",
    "prometheus_client.*"
]
ignore_missing_imports = true
# ^ prometheus_client is now typed, but starlette-prometheus requires an old version
